[package]
name = "tuke"
description = "TUI keyboard for tmux"
version = "0.0.1"
edition = "2024"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
license = "MIT"
homepage = "https://github.com/sile/tuke"
repository = "https://github.com/sile/tuke"
readme = "README.md"

[dependencies]
noargs = "0.4.1"
nojson = "0.3.6"
orfail = "2.0.0"
tuinix = "0.3.2"
